# my_rotate_bot

./: CMakeLists.txt  my_rotate_bot_hardware_plugin.xml  package.xml
controllers/: gazebo_ros2_control_controllers.yaml  ros2_control_controllers.yaml
include/my_rotate_bot/: my_rotate_bot_hardware.hpp
launch/: controller_manager.launch.py  gazebo_ros2_control.launch.py  robot_state_publisher.launch.py
src/: gazebo_client_control_message.cpp  my_rotate_bot_hardware.cpp
urdf/: model.config  model.sdf  model.urdf
